Basic styles and html for header added

--- a/index.html
+++ b/index.html
@@ -29,22 +29,27 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="header">
-        <div class="magnifying-glass">S</div>
-        <div class="search-bar">  </div>
-        <div class="bell">B</div>
-        <div class="profile-avatar">:D</div>
-        <div class="profile-name">Christopher Olsen</div>
-        <div class="profile-big">
-            <div class="avatar">:D</div>
-            <div class="intro">Hi there,</div>
-            <div class="profile-username">Christopher Olsen @crispyChris</div>
+    <div class="header-container">
+        <div class="header-top">
+            <div class="magnifying-glass">M</div>
+            <div class="search-bar">  </div>
+            <div class="bell">B</div>
+            <div class="profile-avatar">:D</div>
+            <div class="profile-name">Christopher Olsen</div>
         </div>
-        <div class="action-buttons">
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
+        <div class="header-bottom">
+            <div class="profile-big">
+                <div class="avatar">:D</div>
+                <div class="profile-username">
+                    <div>Hi there,</div>
+                    <div>Christopher Olsen (@crispychris)</div>
+                </div>
+            </div>
+            <div class="action-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
     </div>
     <div class="projects-grid">
@@ -147,6 +152,7 @@
                 <p>A short decsription of profile</p>
             </div>
         </div>
+    </div>
     </div>
 </body>
 </html>
