announcements bar placement and basic styling addede

--- a/index.html
+++ b/index.html
@@ -52,104 +52,130 @@
             </div>
         </div>
     </div>
-    <div class="projects-grid">
-        <p>Your Projects</p>
-        <div class="project-cell">
-            <div class="project-title">Super cool project</div>
-            <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-            <div class="mini-buttons">
-                <button>F</button>
-                <button>E</button>
-                <button>S</button>
+    <div class="projects-grid-area">
+        <p class="grid-title">Your Projects</p>
+        <div class="projects-grid-container">
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="project-cell">
-            <div class="project-title">Super cool project</div>
-            <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-            <div class="mini-buttons">
-                <button>F</button>
-                <button>E</button>
-                <button>S</button>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="project-cell">
-            <div class="project-title">Super cool project</div>
-            <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-            <div class="mini-buttons">
-                <button>F</button>
-                <button>E</button>
-                <button>S</button>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="project-cell">
-            <div class="project-title">Super cool project</div>
-            <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-            <div class="mini-buttons">
-                <button>F</button>
-                <button>E</button>
-                <button>S</button>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="project-cell">
-            <div class="project-title">Super cool project</div>
-            <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-            <div class="mini-buttons">
-                <button>F</button>
-                <button>E</button>
-                <button>S</button>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="project-cell">
-            <div class="project-title">Super cool project</div>
-            <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-            <div class="mini-buttons">
-                <button>F</button>
-                <button>E</button>
-                <button>S</button>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="announcements-container">
-        <p>Announcements</p>
-        <div class="announcements">
-            <div class="news-one">
+    <div class="right-side-content">
+        <p class="announcements-title">Announcements</p>
+        <div class="announcements-container">
+            <div class="news">
                 <p>Site maintenance</p>
                 <p>Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
             </div> 
-            <div class="news-two">
+            <div class="news">
                 <p>Community Share Day</p>
                 <p>Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
             </div>
-            <div class="news-three">
+            <div class="news">
                 <p>Updated privacy policy</p>
                 <p>Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
             </div>
         </div>
-    </div>
-    <div class="trending-accounts-container">
-        <p>Trending</p>
-        <div class="trending-avatar-container">
-            <div class="trending-avatar">:D</div>
-            <div class="trending-avatar">xD</div>
-            <div class="trending-avatar">:)</div>
-            <div class="trending-avatar">:O</div>
-        </div>
-        <div class="trending-name-container">
-            <div class="trending-name">
-                <p>@trending1</p>
-                <p>A short decsription of profile</p>
+        <p class="trending-title">Trending</p>
+        <div class="trending-accounts-container">
+            <div class="trending-avatar-container">
+                <div class="trending-avatar">:D</div>
+                <div class="trending-avatar">xD</div>
+                <div class="trending-avatar">:)</div>
+                <div class="trending-avatar">:O</div>
             </div>
-            <div class="trending-name">
-                <p>@trending2</p>
-                <p>A short decsription of profile</p>
-            </div>
-            <div class="trending-name">
-                <p>@trending3</p>
-                <p>A short decsription of profile</p>
-            </div>
-            <div class="trending-name">
-                <p>@trending4</p>
-                <p>A short decsription of profile</p>
+            <div class="trending-name-container">
+                <div class="trending-name">
+                    <p>@trending1</p>
+                    <p>A short decsription of profile</p>
+                </div>
+                <div class="trending-name">
+                    <p>@trending2</p>
+                    <p>A short decsription of profile</p>
+                </div>
+                <div class="trending-name">
+                    <p>@trending3</p>
+                    <p>A short decsription of profile</p>
+                </div>
+                <div class="trending-name">
+                    <p>@trending4</p>
+                    <p>A short decsription of profile</p>
+                </div>
             </div>
         </div>
     </div>
