reorganized placement for header elements

--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
         </div>
     <div class="header-container">
         <div class="header-top">
-            <div class="magnifying-glass">M</div>
-            <div class="search-bar">  </div>
-            <div class="bell">B</div>
-            <div class="profile-avatar">:D</div>
-            <div class="profile-name">Christopher Olsen</div>
+            <div class="search-bar">
+                <div>M</div>
+                <textarea cols="30" rows="1"></textarea>
+            </div>
+            <div class="top-right">
+                <div>B</div>
+                <div>O</div>
+                <div>Christopher Olsen</div>
+            </div>
         </div>
         <div class="header-bottom">
-            <div class="profile-big">
-                <div class="avatar">:D</div>
-                <div class="profile-username">
+            <div class="big-profile">
+                <div>O</div>
+                <div class="username">
                     <div>Hi there,</div>
                     <div>Christopher Olsen (@crispychris)</div>
                 </div>
@@ -55,6 +59,45 @@
     <div class="projects-grid-area">
         <p class="grid-title">Your Projects</p>
         <div class="projects-grid-container">
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
+            </div>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
+            </div>
+            <div class="project-cell">
+                <div class="top-cell">
+                    <div class="project-title">Super cool project</div>
+                    <div class="project-description">Sed tempus it lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                </div>
+                <div class="bottom-cell">
+                    <div class="mini-buttons">
+                        <button>F</button>
+                        <button>E</button>
+                        <button>S</button>
+                    </div>
+                </div>
+            </div>
             <div class="project-cell">
                 <div class="top-cell">
                     <div class="project-title">Super cool project</div>
